fixed sticky header and horizontal scroll issue

--- a/css/base/_globals.scss
+++ b/css/base/_globals.scss
@@ -321,6 +321,7 @@ form.woocommerce-ordering {
   max-width: 100%;
   background-attachment: scroll;
   padding-top: 0.5rem;
+  overflow-x: clip;
 
   &::before {
     content: "";
