--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,7 @@ form.woocommerce-ordering select.orderby {
   max-width: 100%;
   background-attachment: scroll;
   padding-top: 0.5rem;
+  overflow-x: clip;
 }
 .site::before {
   content: "";
